--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.15.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-touch-events": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
